...
    return ListTile(
      contentPadding: const EdgeInsets.symmetric(vertical: 4.0),
      title: const Padding(
        padding:
            EdgeInsets.only(left: 0.0), // Adjust the left padding for the title
        child: Text(
          "Create a New Task",
          style: TextStyle(
              fontSize: 18.0, fontWeight: FontWeight.bold), // Bold text
        ),
      ),
      leading: Padding(
        padding: const EdgeInsets.only(left: 16.0),
...
          ),
          const SizedBox(height: 16.0),
          ElevatedButton(
            onPressed: () {
              _createTask();
            },
            child: const Text('Create Task'),
          ),
        ],
      ),
    );
  }

...
